# blood-moon

./: .env.example  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
blood_moon/: bm.py  lamp.py  moon_phase.py
scripts/: build.py  export_svg.py
systemd/: blood_moon.service  blood_moon.timer
tests/: test_bm.py  test_bm_main.py  test_lamp.py  test_moon_phase.py  test_new_moon_phase.py
