[project]
name = "blood-moon"
version = "2.0.0"
description = "A small script to control the lighting of the moon that has a philips hue lamp inside"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "phue>=1.1",
    "ephem>=4.1.6",
    "rich-click>=1.8.5",
    "python-dotenv>=1.0.1"
]


[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8",
    "pytest-freezer>=0.4.9",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
build = "scripts.build:build"
blood_moon = "scripts.build:blood_moon"

[tool.coverage.run]
# Sure the main script doens't have coverage, but I don't care right now. :)
omit = ["blood_moon/bm.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["scripts"]